# DigitalKin2

./: .aider.input.history  README.md  pyproject.toml
src/api/: main.py
src/services/: generate_state_of_art.py  generate_text.py  structure_state_of_art.py
