[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "aider_test"
version = "0.1.0"
description = "Tech Test DigitalKin with Aider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.1",
    "aider-chat",
    "fastapi[standard]",
    "python-dotenv",
    "transformers",
    "torch",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]